feat: bulk revalidate external connections
